syntax = "proto3";

package poverty.api.poverty.information.v1;

option go_package = "./v1;v1";
option java_multiple_files = true;
option java_package = "poverty.api.poverty.information.v1";
option java_outer_classname = "InformationV1";

import "validate/validate.proto";

message GetInformationRequest {
  uint32 id = 1[(validate.rules).uint32 = {gte: 1}];
}

message GetInformationReply {
  uint32 id = 1;
  string title = 2;
  string description = 3;
  string cover = 4;
  string unit = 5;
  string content = 6;
  optional bool isTop = 7;
  optional bool status = 8;
  uint32 read = 9;
  uint32 createdAt = 10;
  uint32 updatedAt = 11;
}

message ListInformationRequest {
  uint32 page = 1[(validate.rules).uint32 = {gte: 1}];
  uint32 pageSize = 2[(validate.rules).uint32 = {gte: 1,lte:50}];
  optional string order = 3[(validate.rules).string = {in: ["asc","desc"]}];
  optional string orderBy = 4[(validate.rules).string = {in: ["id","is_top","created_at","updated_at"]}];
  optional string title = 5[(validate.rules).string = {min_len: 1,max_len: 40}];
  optional bool isTop = 6;
  optional bool status = 7;
}

message ListInformationReply {
  message Information {
    uint32 id = 1;
    string title = 2;
    string description = 3;
    string cover = 4;
    string unit = 5;
    optional bool isTop = 6;
    optional bool status = 7;
    uint32 read = 8;
    uint32 createdAt = 9;
    uint32 updatedAt = 10;
  }
  uint32 total = 1;
  repeated Information list = 2;
}

message CreateInformationRequest {
  string title = 1[(validate.rules).string = {max_len: 40,min_len: 1}];
  string description = 2[(validate.rules).string = {min_len: 1}];
  string cover = 3[(validate.rules).string = {min_len: 1}];
  string unit = 4[(validate.rules).string = {min_len: 1}];
  string content = 5;
  optional bool isTop = 6;
  optional bool status = 7;
  uint32 read = 8;
}

message CreateInformationReply {
  uint32 id = 1;
}

message UpdateInformationRequest {
  uint32 id = 1;
  optional string title = 2[(validate.rules).string = {min_len: 1,max_len: 40}];
  optional string description = 3[(validate.rules).string = {min_len: 1}];
  optional string cover = 4[(validate.rules).string = {min_len: 1}];
  optional string unit = 5[(validate.rules).string = {min_len: 1}];
  optional string content = 6;
  optional bool isTop = 7;
  optional bool status = 8;
  optional uint32 read = 9;
}

message UpdateInformationReply {
}

message DeleteInformationRequest {
  uint32 id = 1[(validate.rules).uint32 = {gte: 1}];
}

message DeleteInformationReply {
}

